# stb_image_plus

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
demo/: resize_demo.cpp
include/: stb_image_plus.h  stb_image_plus_gif.h
source/: stb_image_plus.cpp  stb_image_plus_gif.cpp
stb_image/: README.md  stb_image.cpp
